# skoltech-fse4ai2025

./: LICENSE  README.md  build.sh  docker-compose.yml  pyproject.toml  run_backend.sh  run_docker.sh  run_frontend.sh  run_tests.sh
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  pr-checks.yml  release.yml  security.yml
backend/: Dockerfile  download_model.py  requirements.txt
backend/app/: main.py
frontend/: Dockerfile  app.py
tests/: test_api.py
